--- a/Kiwi.nnwtheme/template.html
+++ b/Kiwi.nnwtheme/template.html
@@ -33,9 +33,11 @@ body: The body of the article.
 <header class="headerContainer">
 	<div class="articleTitle"><h1><a href="[[preferred_link]]">[[title]]</a></h1></div>
 	<div class="headerTitleSecondary">
-	  <span><img id="nnwImageIcon" src="[[avatar_src]]" height=20 width=20 /></span>
-          <span class="secondary"><a href="[[feed_link]]">[[feed_link_title]]</a> [[byline]]</span>
-	  <span class="secondary"><a href="[[preferred_link]]">[[datetime_medium]]</a></span>
+	  <div class="iconWrapper">
+	    <span><img id="nnwImageIcon" src="[[avatar_src]]" height=20 width=20 /></span>
+            <span class="secondary"><a href="[[feed_link]]">[[feed_link_title]]</a> [[byline]]</span>
+	  </div>
+  	  <span class="secondary"><a href="[[preferred_link]]">[[datetime_medium]]</a></span>
 	</div>
 </header>
 
