Truncate long text

--- a/Kiwi.nnwtheme/template.html
+++ b/Kiwi.nnwtheme/template.html
@@ -31,15 +31,15 @@ body: The body of the article.
 -->
 
 <header class="headerContainer">
-	<div class="articleTitle"><h1><a href="[[preferred_link]]">[[title]]</a></h1></div>
-	<div class="headerTitleSecondary">
-	  <div class="iconWrapper">
-	    <span><img id="nnwImageIcon" src="[[avatar_src]]" height=20 width=20 /></span>
-            <span class="secondary"><a href="[[feed_link]]">[[feed_link_title]]</a> [[byline]]</span>
-	  </div>
-  	  <span class="secondary"><a href="[[preferred_link]]">[[datetime_medium]]</a></span>
-	</div>
-</header>
+  <div class="articleTitle"><h1><a href="[[preferred_link]]">[[title]]</a></h1></div>
+    <div class="headerTitleSecondary">
+       <div class="iconWrapper">
+         <span class="wrapper"><img id="nnwImageIcon" src="[[avatar_src]]" height=20 width=20 /></span>
+         <span class="wrapper"><span class="secondary"><a href="[[feed_link]]">[[feed_link_title]]</a> [[byline]]</span></span>
+         <span class="wrapper secondary"><a href="[[preferred_link]]">[[datetime_medium]]</a></span>
+       </div>
+     </div>
+ </header>
 
 <article>
 <div class="externalLink">[[external_link_label]] <a href="[[external_link]]">[[external_link_stripped]]</a></div>
